--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fake-ua": "^1.0.4",
     "get-stream": "^6.0.1",
     "morgan": "^1.10.0",
+    "nekoboi": "^2.0.0",
     "pdfkit": "^0.13.0"
   }
 }
